# Anime-Super-Resolution

./: README.md  pyproject.toml
apps/: gradio_app.py
apps/assets/examples/Real-ESRGAN-Anime-finetuning/1/: config.json
apps/gradio_app/static/: styles.css
configs/: Real-ESRGAN-Anime-finetuning.yml  anime_up_scaler.yml  model_ckpts.yaml
docs/scripts/: download_dataset_doc.md
notebooks/: anime-super-resolution-psnr.ipynb
requirements/: requirements.txt  requirements_compatible.txt  requirements_inference.txt
scripts/: download_ckpts.py  download_datasets.py  setup_third_party.py
src/anime_super_resolution/: infer.py  train.py
src/anime_super_resolution/inference/real_esrgan_inference/: model.py
